[package]
name = "imdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
actix-web = "4.0.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
bytes = "1.1"
anyhow = "1.0"
flate2 = "1.0"